# physcontinuum

./: .gitignore  .gitmessage  .pre-commit-config.yaml  .reuseignore  CONVENTIONS.md  Cargo.toml  README.md  REUSE.toml  rust-toolchain.toml
.github/workflows/: release-discord.yml  scheduled-checks.yml  status-checks.yml
crates/physcontinuum-core/: Cargo.toml
crates/physcontinuum-core/src/: lib.rs
engine/: Cargo.toml
