# SPDX-FileCopyrightText: 2026 Magirenko Technologies
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "physcontinuum-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
thiserror		= { version = "2.0", default-features = false }
bytemuck		= { version = "1.24", features = ["derive", "must_cast"] }
tracing 		= { version = "0.1", default-features = false }
tracing-subscriber	= { version = "0.3", default-features = false, features = ["registry"] }
